--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | News homepage</title>
-  
+
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
 
 </head>
+
 <body>
-<!-- 
+  <!-- 
   Home
   New
   Popular
@@ -51,6 +54,90 @@
   The Growth of Gaming
   How the pandemic has sparked fresh opportunities.
    -->
-<h1>Hello world</h1>
+  <main>
+    <header>
+      <div class="logo">
+        <img src="assets/images/logo.svg" alt="Logo">
+      </div>
+      <nav>
+        <ul>
+          <li> <a href="#">Home</a> </li>
+          <li> <a href="#">New</a> </li>
+          <li> <a href="#">Popular</a> </li>
+          <li> <a href="#">Trending</a> </li>
+          <li> <a href="#">Categories</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="section-1">
+      <div class="sec-1">
+        <img src="assets/images/image-web-3-desktop.jpg" alt="Image">
+        <div class="sec-1 row">
+          <h1> The Bright Future of Web <br> 3.0?</h1>
+          <div class="col">
+            <p>
+              We dive into the next evolution of the web that claims to put the power of the platforms back into the
+              hands of the people. <br>
+              But is it really fulfilling its promise?
+            </p>
+            <a href="#" title="Click to visit" class="btn">Read More</a>
+          </div>
+        </div>
+      </div>
+      <aside class="side-bar">
+        <h2>New</h2>
+        <div>
+          <h3>Hydrogen VS Electric Cars</h3>
+          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+        </div>
+        <div>
+          <h3> The Downsides of AI Artistry</h3>
+          <p>
+            What are the possible adverse effects of on-demand AI image generation?
+          </p>
+        </div>
+        <div>
+          <h3>
+            Is VC Funding Drying Up?</h3>
+          <p> Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+        </div>
+      </aside>
+    </section>
+    <div class="section-2">
+      <div class="card">
+         <img src="assets/images/image-retro-pcs.jpg" alt="Image">
+         <div class="card-body">
+           <h3>01</h3>
+           <h4>Reviving Retro PC's</h4>
+           <p>
+            What happens when old PCs are given modern upgrades?
+           </p>
+         </div>
+      </div>
+
+      <div class="card">
+        <img src="assets/images/image-retro-pcs.jpg" alt="Image">
+        <div class="card-body">
+          <h3>02</h3>
+          <h4>  Top 10 Laptops of 2022</h4>
+          <p>
+            Our best picks for various needs and budget
+          </p>
+        </div>
+     </div>
+
+     <div class="card">
+      <img src="assets/images/image-retro-pcs.jpg" alt="Image">
+      <div class="card-body">
+        <h3>03</h3>
+        <h4>The Growth of Gaming</h4>
+        <p>
+          How the pandemic has sparked fresh opportunities.
+        </p>
+      </div>
+   </div>
+    </div>
+  </main>
 </body>
+
 </html>
