--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -72,13 +72,12 @@
     <section class="section-1">
       <div class="sec-1">
         <img src="assets/images/image-web-3-desktop.jpg" alt="Image">
-        <div class="sec-1 row">
-          <h1> The Bright Future of Web <br> 3.0?</h1>
+        <div class="sec-1-row">
+          <h1> The Bright Future of Web  3.0?</h1>
           <div class="col">
             <p>
               We dive into the next evolution of the web that claims to put the power of the platforms back into the
-              hands of the people. <br>
-              But is it really fulfilling its promise?
+              hands of the people. But is it really fulfilling its promise?
             </p>
             <a href="#" title="Click to visit" class="btn">Read More</a>
           </div>
