--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -17,43 +17,6 @@
 </head>
 
 <body>
-  <!-- 
-  Home
-  New
-  Popular
-  Trending
-  Categories
-
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-   -->
   <main>
     <header>
       <div class="logo">
@@ -68,12 +31,16 @@
           <li> <a href="#">Categories</a></li>
         </ul>
       </nav>
+      <div class="toggler-container">
+        <button class="toggler" id="level">
+        </button>
+      </div>
     </header>
     <section class="section-1">
       <div class="sec-1">
         <img src="assets/images/image-web-3-desktop.jpg" alt="Image">
         <div class="sec-1-row">
-          <h1> The Bright Future of Web  3.0?</h1>
+          <h1> The Bright Future of Web 3.0?</h1>
           <div class="col">
             <p>
               We dive into the next evolution of the web that claims to put the power of the platforms back into the
@@ -86,57 +53,64 @@
       <aside class="side-bar">
         <h2>New</h2>
         <div>
-          <h3>Hydrogen VS Electric Cars</h3>
+          <h3><a title="Click to visit" href="https://www.google.com/search?q=news" target="_blank">Hydrogen VS Electric
+              Cars</a></h3>
           <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
         </div>
         <div>
-          <h3> The Downsides of AI Artistry</h3>
+          <h3> <a title="Click to visit" href="https://www.google.com/search?q=news" target="_blank">The Downsides of AI
+              Artistry </a></h3>
           <p>
             What are the possible adverse effects of on-demand AI image generation?
           </p>
         </div>
         <div>
           <h3>
-            Is VC Funding Drying Up?</h3>
+            <a title="Click to visit" href="https://www.google.com/search?q=news" target="_blank">Is VC Funding Drying
+              Up? </a>
+          </h3>
           <p> Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
         </div>
       </aside>
     </section>
-    <div class="section-2">
-      <div class="card">
-         <img src="assets/images/image-retro-pcs.jpg" alt="Image">
-         <div class="card-body">
-           <h3>01</h3>
-           <h4>Reviving Retro PC's</h4>
-           <p>
-            What happens when old PCs are given modern upgrades?
-           </p>
-         </div>
-      </div>
-
+    <section class="section-2">
       <div class="card">
         <img src="assets/images/image-retro-pcs.jpg" alt="Image">
         <div class="card-body">
+          <h3>01</h3>
+          <h4><a title="Click to visit" href="https://www.google.com/search?q=trends" target="_blank">Reviving Retro
+              PC's</a></h4>
+          <p>
+            What happens when old PCs are given modern upgrades?
+          </p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="assets/images/image-top-laptops.jpg" alt="Image">
+        <div class="card-body">
           <h3>02</h3>
-          <h4>  Top 10 Laptops of 2022</h4>
+          <h4><a title="Click to visit" href="https://www.google.com/search?q=trends" target="_blank">Top 10 Laptops of
+              2022</a></h4>
           <p>
             Our best picks for various needs and budget
           </p>
         </div>
-     </div>
-
-     <div class="card">
-      <img src="assets/images/image-retro-pcs.jpg" alt="Image">
-      <div class="card-body">
-        <h3>03</h3>
-        <h4>The Growth of Gaming</h4>
-        <p>
-          How the pandemic has sparked fresh opportunities.
-        </p>
       </div>
-   </div>
-    </div>
-  </main>
-</body>
 
+      <div class="card">
+        <img src="assets/images/image-gaming-growth.jpg" alt="Image">
+        <div class="card-body">
+          <h3>03</h3>
+          <h4><a title="Click to visit" href="https://www.google.com/search?q=trends" target="_blank">The Growth of
+              Gaming</a></h4>
+          <p>
+            How the pandemic has sparked fresh opportunities.
+          </p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <script src="js/app.js"></script>
+</body>
 </html>
